# data_lakehouse_olist

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
scripts/: database.py  database_config.py  extract.py  ingestion_pipeline.py  load.py
utils/: logger_config.py
